# Differentia

./: CMakeLists.txt  README.md  fpm.toml
.github/workflows/: test.yaml
src/: CMakeLists.txt  differentia.f90  differentia_const.f90  differentia_derivative.f90  differentia_dual.f90
test/: CMakeLists.txt  fypp_example.fypp  test_differentia.f90  test_sparse.f90
